describe("helper js <navigation_helper> test",()=>{const{wrap:r}=require("jest-snapshot-serializer-raw");beforeAll(e=>{require("../../../js/helper/navigation/navigation_helper"),e()}),test("NavigationHelper, HorizontalNavigator, VerticalNavigator, BoxNavigator, GroupNavigator should be object",e=>{expect(typeof window.NavigationHelper).toBe("object"),expect(typeof window.HorizontalNavigator).toBe("object"),expect(typeof window.NavigationHelper).toBe("object"),expect(typeof window.BoxNavigator).toBe("object"),expect(typeof window.GroupNavigator).toBe("object"),e()}),test("NavigationHelper.resetMenu",e=>{expect(typeof window.NavigationHelper.resetMenu).toBe("function"),e()}),test("NavigationHelper.resetMenu should return",e=>{var t=jest.spyOn(window.NavigationHelper,"reset");document.body.innerHTML=`
    <form data-subtype="menu">
      <button id="button" />
    </form>
  `;var o=window.NavigationHelper.resetMenu();expect(t).toBeCalledTimes(1),expect(o).toBeNull(),e()}),describe("NavigationHelper.resetMenu return value test",()=>{let o=null,n=null,i=null;beforeEach(e=>{o=jest.spyOn(window.NavigationHelper,"reset"),n=jest.spyOn(window.NavigationHelper,"updateNav"),i=jest.spyOn(window.NavigationHelper,"setFocus"),e()}),test("NavigationHelper.resetMenu should return focusElement when child > 1",e=>{document.body.innerHTML=`
        <form data-subtype="menu" id="mainmenu">
          <button id="submenu_button1" class="menu-button"/>
          <button id="submenu_button2" class="menu-button"/>
          <button id="submenu_button3" class="menu-button"/>
        </form>
      `;var t=window.NavigationHelper.resetMenu();expect(o).toBeCalledTimes(3),expect(n).toBeCalledTimes(1),expect(i).toBeCalledTimes(1),expect(r(t)).toMatchSnapshot(),e()}),test("NavigationHelper.resetMenu should return focusElement when child = 1",e=>{document.body.innerHTML=`
        <form data-subtype="menu" id="mainmenu">
          <button id="button" class="menu-button"/>
        </form>
      `;var t=window.NavigationHelper.resetMenu();expect(o).toBeCalledTimes(1),expect(n).toBeCalledTimes(1),expect(i).toBeCalledTimes(1),expect(r(t)).toMatchSnapshot(),e()})}),test("NavigationHelper.scrollToElement",e=>{expect(typeof window.NavigationHelper.scrollToElement).toBe("function"),e()}),test("NavigationHelper.scrollToElement return value test",e=>{var t=document.createElement("div"),o=jest.spyOn(t,"offsetWidth","get").mockReturnValue(10),n=jest.spyOn(t,"offsetHeight","get").mockReturnValue(10),i=jest.spyOn(t,"getClientRects").mockReturnValue([{top:10,bottom:10}]);window.HTMLElement.prototype.scrollIntoView=jest.fn();window.NavigationHelper.scrollToElement(t,{key:"ArrowUp"},20,0),expect(o).toBeCalledTimes(1),expect(n).toBeCalledTimes(1),expect(i).toBeCalledTimes(1),expect(window.HTMLElement.prototype.scrollIntoView).toBeCalledTimes(1),window.HTMLElement.prototype.scrollIntoView=void 0,e()}),test("NavigationHelper.Key2Dir",e=>{expect(typeof window.NavigationHelper.Key2Dir).toBe("function"),e()}),test("NavigationHelper.Key2Dir return value test",e=>{var t=window.NavigationHelper.Key2Dir("ArrowLeft");expect(t).toBe(0);t=window.NavigationHelper.Key2Dir("ArrowRight");expect(t).toBe(1);t=window.NavigationHelper.Key2Dir("ArrowUp");expect(t).toBe(2);t=window.NavigationHelper.Key2Dir("ArrowDown");expect(t).toBe(3);t=window.NavigationHelper.Key2Dir("test");expect(t).toBeUndefined(),e()}),test("HorizontalNavigator.left, right, up, down should be function",e=>{expect(typeof window.HorizontalNavigator.left).toBe("function"),expect(typeof window.HorizontalNavigator.right).toBe("function"),expect(typeof window.HorizontalNavigator.up).toBe("function"),expect(typeof window.HorizontalNavigator.down).toBe("function"),e()}),test("HorizontalNavigator.left, right, up, down return value test",e=>{var t=window.HorizontalNavigator.left(0);expect(t).toBe(-1);t=window.HorizontalNavigator.right(0);expect(t).toBe(1);t=window.HorizontalNavigator.left(1);expect(t).toBe(0);t=window.HorizontalNavigator.right(-1);expect(t).toBe(0);t=window.HorizontalNavigator.up(0);expect(t).toBe(0);t=window.HorizontalNavigator.down(0);expect(t).toBe(0),e()}),test("BoxNavigator.left, right, up, down should be function",e=>{expect(typeof window.BoxNavigator.left).toBe("function"),expect(typeof window.BoxNavigator.right).toBe("function"),expect(typeof window.BoxNavigator.up).toBe("function"),expect(typeof window.BoxNavigator.down).toBe("function"),e()}),test("BoxNavigator.left, right, up, down return value test",e=>{var t=window.BoxNavigator.left(0);expect(t).toBe(-1);t=window.BoxNavigator.right(0);expect(t).toBe(0);t=window.BoxNavigator.up(0);expect(t).toBe(-2);t=window.BoxNavigator.down(0);expect(t).toBe(0),e()}),test("GroupNavigator.left, right, up, down should be function",e=>{expect(typeof window.GroupNavigator.left).toBe("function"),expect(typeof window.GroupNavigator.right).toBe("function"),expect(typeof window.GroupNavigator.up).toBe("function"),expect(typeof window.GroupNavigator.down).toBe("function"),e()}),test("GroupNavigator.left, right, up, down return value test",e=>{GroupNavigator.getGroupInfo=function(e,t){return{curGroupIndex:0,curGroupLen:6,destGroupLen:8}};var t=window.GroupNavigator.left(0);expect(t).toBe(-1);t=window.GroupNavigator.right(0);expect(t).toBe(0);t=window.GroupNavigator.up(0);expect(t).toBe(-2);t=window.GroupNavigator.down(0);expect(t).toBe(3),e()}),afterEach(e=>{jest.restoreAllMocks(),e()}),afterAll(e=>{document.body.innerHTML="",GroupNavigator.getGroupInfo=null,e()})});